# rust-cli

./: .markdownlint-cli2.yaml  AGENTS.md  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mise.toml  rust-toolchain.toml
{{cookiecutter.project_slug}}/.config/: nextest.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/docs/: releasing.md
{{cookiecutter.project_slug}}/src/: config.rs  lib.rs  main.rs
{{cookiecutter.project_slug}}/src/commands/: self_update.rs
{{cookiecutter.project_slug}}/tests/: cli.rs  snapshots.rs
